Made filters on index page. Trying to send the filter data from the view to the controller using the POST method instead of GET.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -43,6 +43,18 @@ body {
     margin: 5px;
 }
 
+.formIndex{
+    text-align: center;
+}
+
+.pFiltersIndex{
+    margin-top: 25px;
+}
+
+.buttonIndex{
+    margin-top: 25px;
+}
+
 .indexTable{
     table-layout: fixed;
     width:100%;
