--- a/public/css/index.css
+++ b/public/css/index.css
@@ -16,6 +16,10 @@ body {
     height: 60px;
 }
 
+.navButton{
+    margin-right: 5%;
+}
+
 .container{
     max-width: 100%;
     /*margin-bottom: 20px;*/
